# otus_cpp_03

./: .travis.yml  CMakeLists.txt  main.cpp  version.h.in
